argo-vpol/application-prevent-default-project/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: application-prevent-default-project
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
        type: WebhookConfigured
