argo-vpol/application-prevent-default-project/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: application-prevent-default-project
spec:
  template: false
  steps:
    - name: step-01
      try:
        - assert:
            file: crd-assert.yaml
    - name: step-02
      try:
        - apply:
            file: ../application-prevent-default-project.yaml
        - patch:
            resource:
              apiVersion: policies.kyverno.io/v1
              kind: ValidatingPolicy
              metadata:
                name: application-prevent-default-project
              spec:
                validationActions: [Deny]
        - assert:
            file: policy-ready.yaml
    - name: step-03
      try:
       - apply:
           file: good-application.yaml
       - apply:
           expect:
             - check:
                 ($error != null): true
           file: bad-application.yaml
